--- a/chatting/templates/chatting.html
+++ b/chatting/templates/chatting.html
@@ -13,12 +13,14 @@
   <body>
 <div class=container>
   
-    <h1>Chatting Shatting</h1>
-    
+    <h1>CHATTING SHATTING</h1>
+    <form action='/' onsubmit="return validate()" method='post'> {% csrf_token %}
+  <button type="submit" class="btn btn-danger">Message</button>
+</form>
 
 <hr><hr>
 {% for i in catprods|slice:"::-1" %}
-<li><b>{{ i.text }}</b>&nbsp&nbsp&nbsp&nbsp({{ i.name }})</li> <br>
+<li><b><font color="blue">{{ i.text }}</font></b>&nbsp&nbsp&nbsp&nbsp({{ i.name }})</li> <br>
 {% endfor %}'
 
 <script type="text/javascript">
@@ -26,9 +28,7 @@ window.setTimeout(function () {
     location.href = "";
 }, 4000);
 </script>
-<form action='/' onsubmit="return validate()" method='post'> {% csrf_token %}
-  <button type="submit" class="btn btn-dark">Message</button>
-</form>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
