--- a/chatting/templates/index.html
+++ b/chatting/templates/index.html
@@ -10,9 +10,9 @@
 
     <title>chatting</title>
   </head>
-  <body>
+  <body background="https://wallpapercave.com/wp/wp5471067.jpg">
 
-   <br><br>
+   <br><br><font color="white">
 <div class="container">
 <u><b>Enter Your Name</u></b><br>
 <form action='/chatting/' onsubmit="return validate()" method='post'> {% csrf_token %}
